--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -60,6 +60,7 @@
     <string name="donations_google_android_market_donate_button">¡Donar!</string>
     <string name="donations_google_android_market_text">¿Cuánto?</string>
     <string name="donations_paypal">PayPal</string>
+    <string name="donations_yandex">Yandex.Money</string>
     <string name="donations_paypal_description">¡Puedes elegir cuánto quieres donar después de pulsar el botón!</string>
     <string name="donations_paypal_item_name">InApp Donation</string>
     <string name="donations_thanks_dialog">"¡Gracias por donar!\n¡Te lo agradezco mucho!"</string>
@@ -134,17 +135,20 @@
     <string name="settings_update_interval_title">Intérvalo de actualización</string>
     <string name="settings_update_roaming_summary">Actualizar automáticamente el pronóstico del tiempo en itinerancia. Tenga en cuenta que usted puede tener un coste adicional en su factura de teléfono</string>
     <string name="settings_update_roaming_title">Actualización en itinerancia</string>
+    <string name="settings_update_wake_title">Despertar dispositivo</string>
     <string name="settings_update_wifi_only_summary">Actualizar automáticamente el pronóstico del tiempo sólo cuando se disponga de conexión Wifi</string>
     <string name="settings_update_wifi_only_title">Actualizar mediante Wi-Fi</string>
     <string name="settings_widgets_click_clock_summary">Seleccione la aplicación que se iniciará al tocar el reloj</string>
     <string name="settings_widgets_click_clock_title">Clic en el reloj</string>
+    <string name="settings_widgets_click_date_summary">Seleccione la aplicación que se iniciará al tocar fecha</string>
+    <string name="settings_widgets_click_date_title">Clic en la fecha</string>
     <string name="settings_widgets_click_weather_summary">Seleccione la aplicación que se iniciará al tocar la previosión del tiempo</string>
     <string name="settings_widgets_click_weather_title">Clic en la previsión</string>
-    <string name="settings_widgets_widget4x1">Widget 4x1</string>
+    <string name="settings_widgets_widget4x1">Widget 4x1 Extendido</string>
     <string name="settings_widgets_widget4x1_data_title">Datos ampliados</string>
-    <string name="settings_widgets_widget4x1_transparent_sum">Desactivado para el fondo por defecto</string>
+    <string name="settings_widgets_widget4x1_transparent_sum">Se ocultará el fondo por defecto</string>
     <string name="settings_widgets_widget4x1_transparent_title">Fondo transparente</string>
-    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2 Normal</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Por defecto 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Ciudad</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Por defecto 50sp</string>
@@ -193,10 +197,11 @@
     <string name="weather_sunset">"Puesta del sol: "</string>
     <string name="weather_visibility">"Visibilidad: "</string>
     <string name="weather_wind">"Viento: "</string>
-    <string name="widget_name_large">Tiempo BZ 4x2</string>
-    <string name="widget_name_large_v5">Tiempo BZ 4x2</string>
-    <string name="widget_name_medium">Tiempo BZ 4x1</string>
-    <string name="widget_name_medium_ext">Tiempo BZ 4x1</string>
+    <string name="widget_name_large">Tiempo BZ 4x2 Normal</string>
+    <string name="widget_name_large_v5">Tiempo BZ 4x2 MIUI v5</string>
+    <string name="widget_name_medium">Tiempo BZ 4x1 Normal</string>
+    <string name="widget_name_medium_ext">Tiempo BZ 4x1 Extendido</string>
+    <string name="widget_name_medium_v5">Tiempo BZ 4x1 MIUI v5</string>
     <string name="widget_text_color_summary">"Color del texto del widget"</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">E-NE</string>
