--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="new_version">Nowa wersja</string> 
-	<string name="upgrade">Aktualizuj</string> 
-	<string name="not_now">Później</string> 
-	<string name="loading">Wczytywanie\u2026</string> 
+    <string name="upgrade">Aktualizuj</string> 
+    <string name="not_now">Później</string> 
+    <string name="loading">Wczytywanie\u2026</string> 
     <string name="about_author">Autor:</string>
     <string name="about_blizzard">Burza śnieżna</string>
     <string name="about_cloudy">Pochmurnie</string>
@@ -15,8 +15,8 @@
     <string name="about_hailstone">Grad</string>
     <string name="about_heavy_snow">Śnieg</string>
     <string name="about_light_rain">Lekki deszcz</string> 
-  	<string name="about_light_snow">Lekki śnieg</string> 
-  	<string name="about_overcast">Zachmurzenie</string>
+    <string name="about_light_snow">Lekki śnieg</string> 
+    <string name="about_overcast">Zachmurzenie</string>
     <string name="about_rain">Deszcz</string>
     <string name="about_rainstorm">Ulewy</string>
     <string name="about_showers">Przelotne deszcze</string>
@@ -104,22 +104,22 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_category_animation_sum">Animacje pogody</string>
     <string name="settings_category_app_update">Aktualizacje aplikacji</string>
     <string name="settings_category_appearance">Wygląd</string>
-    <string name="settings_category_appearance_sum">Ustawienia wyglądu (jednostki, kolory tekstu itp.)</string>
+    <string name="settings_category_appearance_sum">Ustawienia wyglądu aplikacji</string>
     <string name="settings_category_forecast_update">Aktualizacje prognozy</string>
     <string name="settings_category_miui">System MIUI</string>
     <string name="settings_category_miui_sum">Wsparcie dla systemu MIUI</string>
     <string name="settings_category_network">Ustawienia sieci</string>
     <string name="settings_category_notification">Powiadomienia</string>
-    <string name="settings_category_notification_sum">Ustawienia powiadomień o pogodzie</string>
+    <string name="settings_category_notification_sum">Powiadomienia o pogodzie</string>
     <string name="settings_category_update">Aktualizacje</string>
-    <string name="settings_category_update_sum">Ustawienia automatycznych aktualizacji</string>
-    <string name="settings_category_widgets">Ustawienia widżetów</string>
+    <string name="settings_category_update_sum">Aktualizacje prognozy pogody</string>
+    <string name="settings_category_widgets">Widżety</string>
     <string name="settings_category_widgets_sum">Wygląd widżetów i akcje na kliknięcia</string>
     <string name="settings_check_updates_summary">Sprawdź aktualizacje aplikacji przy uruchamianiu</string>
     <string name="settings_check_updates_title">Sprawdzaj aktualizacje</string>
     <string name="settings_click_actions">Akcje kliknięcia</string>
     <string name="settings_miui_support_summary">Włącz wsparcie dla natywnych widżetów MIUI</string>
-    <string name="settings_miui_support_title">Możliwość korzystania z oryginalnego widżetu pogody MIUI</string>
+    <string name="settings_miui_support_title">Widżety MIUI</string>
     <string name="settings_miui_v5_summary">Kompatybilność z systemem MIUI v5</string>
     <string name="settings_miui_v5_title">Wsparcie dla MIUI v5</string>
     <string name="settings_notification_color_title">Kolor symbolu na pasku statusu</string>
@@ -137,17 +137,20 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_update_interval_title">Odśwież co</string>
     <string name="settings_update_roaming_summary">Odświeżaj prognozę pogody podczas roamingu. Operator może naliczać wysokie opłaty</string>
     <string name="settings_update_roaming_title">Odświeżaj w roamingu</string>
+    <string name="settings_update_wake_title">Wybudzenie urządzenia</string>
     <string name="settings_update_wifi_only_summary">Odświeżaj prognozę pogody tylko w obecności połączenia Wi-Fi</string>
     <string name="settings_update_wifi_only_title">Tylko z Wi-Fi</string>
     <string name="settings_widgets_click_clock_summary">Wybierz aplikację do uruchomienia po dotknięciu zegara</string>
     <string name="settings_widgets_click_clock_title">Dotknięcie zegara</string>
+    <string name="settings_widgets_click_date_summary">Wybierz aplikację do uruchomienia po dotknięciu daty</string>
+    <string name="settings_widgets_click_date_title">Dotknięcie daty</string>
     <string name="settings_widgets_click_weather_summary">Wybierz aplikację do uruchomienia po dotknięciu prognozy pogody (temperatury)</string>
     <string name="settings_widgets_click_weather_title">Dotknięcie prognozy</string>
     <string name="settings_widgets_widget4x1">Widżet 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Rozszerzona pogoda</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Odznacz dla domyślnego tła</string>
     <string name="settings_widgets_widget4x1_transparent_title">Przezroczyste tło</string>
-    <string name="settings_widgets_widget4x2">Widżet 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x2">Widżetet 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Domyślnie 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Miasto</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Domyślnie 50sp</string>
@@ -200,6 +203,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="widget_name_large_v5">Pogoda v5 4x2</string>
     <string name="widget_name_medium">Pogoda 4x1</string>
     <string name="widget_name_medium_ext">Pogoda 4x1</string>
+    <string name="widget_name_medium_v5">Pogoda v5 4x1</string>
     <string name="widget_text_color_summary">"Kolor tekstu widżetu"</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">ENE</string>
