--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -98,20 +98,20 @@
     <string name="settings_animation_show_summary">Show weather animation for current conditions</string>
     <string name="settings_animation_show_title">Show animation</string>
     <string name="settings_animation_type">Animation type</string>
-    <string name="settings_category_animation">Animation settings</string>
-    <string name="settings_category_animation_sum">Settings for weather animation view and download policy</string>
+    <string name="settings_category_animation">Animation</string>
+    <string name="settings_category_animation_sum">Animation type, download policy</string>
     <string name="settings_category_app_update">Application update</string>
     <string name="settings_category_appearance">Appearance</string>
-    <string name="settings_category_appearance_sum">Appearance settings (measure units, text color etc.)</string>
+    <string name="settings_category_appearance_sum">Measure units, text color etc.</string>
     <string name="settings_category_forecast_update">Forecast update</string>    
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">MIUI support settings (turn on/off, clear data etc.)</string>
     <string name="settings_category_network">Network settings</string>
-    <string name="settings_category_notification">Notifications settings</string>
+    <string name="settings_category_notification">Notifications</string>
     <string name="settings_category_notification_sum">Weather notifications settings</string>
-    <string name="settings_category_update">Update settings</string>
+    <string name="settings_category_update">Update</string>
     <string name="settings_category_update_sum">Settings for autoupdate and autoupdate time</string>
-    <string name="settings_category_widgets">Widgets settings</string>
+    <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Widgets appearance and click actions</string>
     <string name="settings_click_actions">Click actions</string>
     <string name="settings_check_updates_summary">Check for updates on application start</string>    
@@ -197,11 +197,11 @@
     <string name="weather_sunset">"Sunset: "</string>
     <string name="weather_visibility">"Visibility: "</string>
     <string name="weather_wind">"Wind: "</string>
-    <string name="widget_name_large">Weather BZ 4x2</string>
-    <string name="widget_name_large_v5">Weather BZ 4x2</string>
-    <string name="widget_name_medium">Weather BZ 4x1</string>
-    <string name="widget_name_medium_ext">Weather BZ 4x1</string>
-    <string name="widget_name_medium_v5">Weather BZ 4x1</string>
+    <string name="widget_name_large">(4x2)Weather BZ</string>
+    <string name="widget_name_large_v5">(4x2 v5)Weather BZ</string>
+    <string name="widget_name_medium">(4x1)Weather BZ</string>
+    <string name="widget_name_medium_ext">(4x1 ext)Weather BZ</string>
+    <string name="widget_name_medium_v5">(4x1 v5)Weather BZ</string>
     <string name="widget_text_color_summary">"The widget's text color"</string> 
     <string name="wind_e">E</string> 
     <string name="wind_ene">E-NE</string>
