--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -44,6 +44,9 @@
     <string name="conf_light_skin">Lys Skin</string>
     <string name="conf_name">Widget indstillinger</string>
     <string name="conf_no_background">Ingen baggrund</string>
+    <string name="date_format_title">Dato format</string>
+    <string name="date_format_mdy">01/30/2013</string>
+    <string name="date_format_dmy">30/01/2013</string>
     <string name="dialog_color_picker">Vælg Farve</string>
     <string name="dlg_go_to_forecast">Gå til vejrudsigt</string>
     <string name="dlg_select_action">Vælg en handling</string>
