--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -101,20 +101,20 @@
     <string name="settings_animation_show_summary">Vis video animation for aktuel vejr situation</string>
     <string name="settings_animation_show_title">Vis animation</string>
     <string name="settings_animation_type">Animation type</string>
-    <string name="settings_category_animation">Animation indstillinger</string>
-    <string name="settings_category_animation_sum">indstillinger for vejr animation visning og download politik</string>
+    <string name="settings_category_animation">Animation</string>
+    <string name="settings_category_animation_sum">Animationstype, download politik</string>
     <string name="settings_category_app_update">Opdater app</string>
     <string name="settings_category_appearance">Udseende</string>
-    <string name="settings_category_appearance_sum">Indstillinger for udseende (vis/skjul data etc.)</string>
+    <string name="settings_category_appearance_sum">Måleenheder, tekstfarve, etc.</string>
     <string name="settings_category_forecast_update">Vejr opdatering</string>
     <string name="settings_category_miui">MIUI ROM</string>
     <string name="settings_category_miui_sum">MIUI indstillinger (slå til/fra, ryd data, etc.)</string>
     <string name="settings_category_network">Netværksindstillinger</string>
-    <string name="settings_category_notification">Notifikationsindstillinger</string>
+    <string name="settings_category_notification">Notifikationer</string>
     <string name="settings_category_notification_sum">Vejr notifikationsindstillinger</string>
-    <string name="settings_category_update">Opdateringsindstillinger</string>
+    <string name="settings_category_update">Opdateringer</string>
     <string name="settings_category_update_sum">Indstillinger for auto opdatering og opdateringstid</string>
-    <string name="settings_category_widgets">Widget indstillinger</string>
+    <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Widgets udseende og tryk handlinger</string>
     <string name="settings_click_actions">Tryk handlinger</string>
     <string name="settings_check_updates_summary">Kontroller for opdateringer ved app start</string>    
@@ -200,11 +200,11 @@
     <string name="weather_sunset">"Solnedgang: "</string>
     <string name="weather_visibility">"Sigtbarhed: "</string>
     <string name="weather_wind">"Vind: "</string>
-    <string name="widget_name_large">Vejr BZ 4x2</string>
-    <string name="widget_name_large_v5">Vejr BZ 4x2 (v5)</string>
-    <string name="widget_name_medium">Vejr BZ 4x1</string>
-    <string name="widget_name_medium_ext">Vejr BZ 4x1</string>
-    <string name="widget_name_medium_v5">Weather BZ 4x1 (v5)</string>
+    <string name="widget_name_large">(4x2)Vejr BZ</string>
+    <string name="widget_name_large_v5">(4x2 v5)Vejr BZ</string>
+    <string name="widget_name_medium">(4x1)Vejr BZ</string>
+    <string name="widget_name_medium_ext">(4x1 ext)Vejr BZ</string>
+    <string name="widget_name_medium_v5">(4x1 v5)Vejr BZ</string>
     <string name="widget_text_color_summary">Tekstfarve i widget</string>
     <string name="wind_e">Ø</string>
     <string name="wind_ene">Ø-NØ</string>
