--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -44,6 +44,9 @@
     <string name="conf_light_skin">Hell</string>
     <string name="conf_name">Widget Einstellungen</string>
     <string name="conf_no_background">Kein Hintergrund</string>
+    <string name="date_format_title">Datumsformat</string>
+    <string name="date_format_mdy">01/30/2013</string>
+    <string name="date_format_dmy">30/01/2013</string>
     <string name="dialog_color_picker">Farbwähler</string> 
     <string name="dlg_go_to_forecast">Gehe zur Vorhersage</string>
     <string name="dlg_select_action">Wähle eine Aktion</string>
@@ -98,18 +101,18 @@
     <string name="settings_animation_show_summary">Zeige Wetter-Animation für aktuelle Bedingungen</string>
     <string name="settings_animation_show_title">Zeige Animation</string>
     <string name="settings_animation_type">Art der Animation</string>
-    <string name="settings_category_animation">Animationseinstellungen</string>
-    <string name="settings_category_animation_sum">Einstellungen für Wetteranimationen und Download-Regeln</string>
+    <string name="settings_category_animation">Animationen</string>
+    <string name="settings_category_animation_sum">Animationsart, Download-Regeln</string>
     <string name="settings_category_app_update">Anwendungsupdate</string>
     <string name="settings_category_appearance">Darstellung</string>
-    <string name="settings_category_appearance_sum">Darstellungseinstellungen (Einheiten, Textfarbe etc.)</string>
+    <string name="settings_category_appearance_sum">Einheiten, Textfarbe etc.</string>
     <string name="settings_category_forecast_update">Aktualisierung der Vorhersage</string>    
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">MIUI-Supporteinstellungen (Unterstützung ein/aus, Datenbereinigung etc.)</string>
     <string name="settings_category_network">Netzwerkeinstellungen</string>
-    <string name="settings_category_notification">Benachrichtigungs-Einstellungen</string>
+    <string name="settings_category_notification">Benachrichtigungen</string>
     <string name="settings_category_notification_sum">Wetter-Benachrichtigungs-Einstellungen</string>
-    <string name="settings_category_update">Aktualisierungseinstellungen</string>
+    <string name="settings_category_update">Aktualisierung</string>
     <string name="settings_category_update_sum">Einstellungen für automatisches Aktualisieren und Intervalle</string>
     <string name="settings_category_widgets">Widget-Einstellungen</string>
     <string name="settings_category_widgets_sum">Widget-Darstellung und Widget-Aktionen</string>
@@ -197,11 +200,11 @@
     <string name="weather_sunset">"Sonnenuntergang: "</string>
     <string name="weather_visibility">"Sichweite: "</string>
     <string name="weather_wind">"Wind: "</string>
-    <string name="widget_name_large">Wetter BZ 4x2</string>
-    <string name="widget_name_large_v5">Wetter BZ 4x2 v5</string>
-    <string name="widget_name_medium">Wetter BZ 4x1</string>
-    <string name="widget_name_medium_ext">Wetter BZ 4x1 Ext</string>
-    <string name="widget_name_medium_v5">Wetter BZ 4x1 v5</string>
+    <string name="widget_name_large">(4x2) Wetter BZ</string>
+    <string name="widget_name_large_v5">(4x2 v5) Wetter BZ</string>
+    <string name="widget_name_medium">(4x1) Wetter BZ</string>
+    <string name="widget_name_medium_ext">(4x1 Ext) Wetter BZ</string>
+    <string name="widget_name_medium_v5">(4x1 v5) Wetter BZ</string>
     <string name="widget_text_color_summary">"Textfarbe des Widgets"</string> 
     <string name="wind_e">O</string> 
     <string name="wind_ene">O-NO</string>
