--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -44,10 +44,13 @@
     <string name="conf_light_skin">Jasny</string>
     <string name="conf_name">Widżety</string>
     <string name="conf_no_background">Brak tła</string>
+    <string name="date_format_title">Format daty</string>
+    <string name="date_format_mdy">01/30/2013</string>
+    <string name="date_format_dmy">30/01/2013</string>
     <string name="dialog_color_picker">Wybieranie kolorów</string>
     <string name="dlg_go_to_forecast">Przejdź do prognozy</string>
     <string name="dlg_select_action">Wybierz akcje</string>
-    <string name="dlg_set_as_home">Wybierz jako domowy</string>
+    <string name="dlg_set_as_home">Ustaw główną</string>
     <string name="donate">Przekaż</string>
     <string name="donations_button_close">Zamknij</string>
     <string name="donations_description">"Czy uważasz tę aplikację za przydatną?
@@ -199,11 +202,11 @@ Wybierz lokalizację ręcznie"</string>
     <string name="weather_sunset">"Zachód: "</string>
     <string name="weather_visibility">"Widoczność: "</string>
     <string name="weather_wind">"Wiatr: "</string>
-    <string name="widget_name_large">Pogoda 4x2</string>
-    <string name="widget_name_large_v5">Pogoda v5 4x2</string>
-    <string name="widget_name_medium">Pogoda 4x1</string>
-    <string name="widget_name_medium_ext">Pogoda 4x1</string>
-    <string name="widget_name_medium_v5">Pogoda v5 4x1</string>
+    <string name="widget_name_large">(4x2) Pogoda BZ</string>
+    <string name="widget_name_large_v5">(4x2 v5) Pogoda BZ</string>
+    <string name="widget_name_medium">(4x1) Pogoda BZ</string>
+    <string name="widget_name_medium_ext">(4x1 ext) Pogoda BZ</string>
+    <string name="widget_name_medium_v5">(4x1 v5) Pogoda BZ</string>
     <string name="widget_text_color_summary">"Kolor tekstu widżetu"</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">ENE</string>
