--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,8 +45,8 @@
     <string name="conf_name">Widget Settings</string>
     <string name="conf_no_background">No background</string>
     <string name="date_format_title">Date format</string>
-    <string name="date_format_mdy">01/30/2013</string>
-    <string name="date_format_dmy">30/01/2013</string>
+    <string name="date_format_mdy">MM/dd/yyyy</string>
+    <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Color Picker</string> 
     <string name="dlg_go_to_forecast">Go to forecast</string>
     <string name="dlg_select_action">Select an action</string>
