--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -45,8 +45,8 @@
     <string name="conf_name">Widget indstillinger</string>
     <string name="conf_no_background">Ingen baggrund</string>
     <string name="date_format_title">Dato format</string>
-    <string name="date_format_mdy">MM/dd/åååå</string>
-    <string name="date_format_dmy">dd/MM/åååå</string>
+    <string name="date_format_mdy">MM/dd/yyyy</string>
+    <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Vælg Farve</string>
     <string name="dlg_go_to_forecast">Gå til vejrudsigt</string>
     <string name="dlg_select_action">Vælg en handling</string>
