--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="new_version">New version</string> 
-	<string name="upgrade">Upgrade</string> 
-	<string name="not_now">Not now</string> 
-	<string name="loading">Loading\u2026</string> 
+
+    <string name="new_version">New version</string>
+    <string name="upgrade">Upgrade</string>
+    <string name="not_now">Not now</string>
+    <string name="loading">Loading\u2026</string>
     <string name="about_author">Author:</string>
     <string name="about_blizzard">Blizzard</string>
     <string name="about_cloudy">Cloudy</string>
@@ -11,9 +12,9 @@
     <string name="about_dust">Dust</string>
     <string name="about_fog">Fog</string>
     <string name="about_for_translators">For Translators:</string>
-    <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>              
+    <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
     <string name="about_hailstone">Hailstone</string>
-    <string name="about_heavy_snow">Snow</string>    
+    <string name="about_heavy_snow">Snow</string>
     <string name="about_light_rain">Light Rain</string>
     <string name="about_light_snow">Light Snow</string>
     <string name="about_overcast">Overcast</string>
@@ -47,27 +48,27 @@
     <string name="date_format_title">Date format</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
-    <string name="dialog_color_picker">Color Picker</string> 
+    <string name="dialog_color_picker">Color Picker</string>
     <string name="dlg_go_to_forecast">Go to forecast</string>
     <string name="dlg_select_action">Select an action</string>
     <string name="dlg_set_as_home">Set as \"Home City\"</string>
     <string name="donate">Donate</string>
-    <string name="donations_button_close">Close</string> 
-    <string name="donations_description">Do you find this application useful?\nSupport it\'s development by flattring it or sending donations to the developer!</string> 
-    <string name="donations_flattr">Flattr</string> 
-    <string name="donations_flattr_description">Flattr takes 10 % as a monthly fee!</string> 
-    <string name="donations_google_android_market">Google Play Store</string> 
-    <string name="donations_google_android_market_description">Google takes 30 % off every donation!</string> 
-    <string name="donations_google_android_market_donate_button">Donate!</string> 
-    <string name="donations_google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string> 
-    <string name="donations_google_android_market_not_supported_title">In-App Donations are not supported</string> 
-    <string name="donations_google_android_market_text">How much?</string> 
+    <string name="donations_button_close">Close</string>
+    <string name="donations_description">Do you find this application useful?\nSupport it\'s development by flattring it or sending donations to the developer!</string>
+    <string name="donations_flattr">Flattr</string>
+    <string name="donations_flattr_description">Flattr takes 10 % as a monthly fee!</string>
+    <string name="donations_google_android_market">Google Play Store</string>
+    <string name="donations_google_android_market_description">Google takes 30 % off every donation!</string>
+    <string name="donations_google_android_market_donate_button">Donate!</string>
+    <string name="donations_google_android_market_not_supported">In-App Donations are not supported. Is Google Play Store installed correctly?</string>
+    <string name="donations_google_android_market_not_supported_title">In-App Donations are not supported</string>
+    <string name="donations_google_android_market_text">How much?</string>
     <string name="donations_paypal">PayPal</string>
-    <string name="donations_yandex">Yandex.Money</string>  
-    <string name="donations_paypal_description">You can choose how much you want to donate after clicking the button!</string> 
-    <string name="donations_paypal_item_name">InApp Donation</string> 
-    <string name="donations_thanks_dialog">Thanks for donating!\nI really appreciate this!</string>    
-    <string name="donations_thanks_dialog_title">Thanks!</string> 
+    <string name="donations_yandex">Yandex.Money</string>
+    <string name="donations_paypal_description">You can choose how much you want to donate after clicking the button!</string>
+    <string name="donations_paypal_item_name">InApp Donation</string>
+    <string name="donations_thanks_dialog">Thanks for donating!\nI really appreciate this!</string>
+    <string name="donations_thanks_dialog_title">Thanks!</string>
     <string name="download_video">Get video</string>
     <string name="end_time_title">End</string>
     <string name="fetching_location">Getting your position\u2026</string>
@@ -77,7 +78,7 @@
     <string name="location_gps">Current location</string>
     <string name="location_list">Locations</string>
     <string name="location_search">Location search</string>
-    <string name="main_screen_text_color_summary">The text color of main screen data</string> 
+    <string name="main_screen_text_color_summary">The text color of main screen data</string>
     <string name="menu_hourly">Hourly</string>
     <string name="menu_locations">Locations</string>
     <string name="menu_settings">Settings</string>
@@ -85,10 +86,10 @@
     <string name="menu_update">Update</string>
     <string name="network_error">Could not connect the server</string>
     <string name="no_provider">Location is not available\nSelect location manually</string>
-    <string name="no_weather_provider">No MIUI weather provider found</string> 
+    <string name="no_weather_provider">No MIUI weather provider found</string>
     <string name="ok">OK</string>
-    <string name="press_color_to_apply">Press on Color to apply</string> 
-    <string name="pressure_units">Pressure units</string> 
+    <string name="press_color_to_apply">Press on Color to apply</string>
+    <string name="pressure_units">Pressure units</string>
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mmHg"</string>
     <string name="quiet_hours_enabled">Enable Quiet hours</string>
@@ -107,7 +108,7 @@
     <string name="settings_category_app_update">Application update</string>
     <string name="settings_category_appearance">Common</string>
     <string name="settings_category_appearance_sum">Measure units, text color etc.</string>
-    <string name="settings_category_forecast_update">Forecast update</string>    
+    <string name="settings_category_forecast_update">Forecast update</string>
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">MIUI support settings (turn on/off, clear data etc.)</string>
     <string name="settings_category_network">Network settings</string>
@@ -118,15 +119,15 @@
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Widgets appearance and click actions</string>
     <string name="settings_click_actions">Click actions</string>
-    <string name="settings_check_updates_summary">Check for updates on application start</string>    
+    <string name="settings_check_updates_summary">Check for updates on application start</string>
     <string name="settings_check_updates_title">Check for updates</string>
     <string name="settings_miui_support_summary">Turn on to support MIUI native widgets</string>
     <string name="settings_miui_support_title">MIUI widgets support</string>
     <string name="settings_miui_v5_summary">Turn on if you have MIUI v5 ROM</string>
-    <string name="settings_miui_v5_title">MIUI v5 ROM</string>    
+    <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_notification_color_title">Statusbar symbol color</string>
     <string name="settings_notification_summary">Show current weather conditions in the notification area</string>
-    <string name="settings_notification_text_color_summary">Notification text and icons color</string>    
+    <string name="settings_notification_text_color_summary">Notification text and icons color</string>
     <string name="settings_notification_title">Show Notification</string>
     <string name="settings_notification_type">Notification type</string>
     <string name="settings_show_info_summary">Show or hide interface elements</string>
@@ -150,9 +151,9 @@
     <string name="settings_widgets_click_weather_summary">The app to start by clicking on widgets forecast area (temperature)</string>
     <string name="settings_widgets_click_weather_title">Click on Forecast</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
-    <string name="settings_widgets_widget4x1_data_title">Extended data</string>    
-    <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background</string> 
-    <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string> 
+    <string name="settings_widgets_widget4x1_data_title">Extended data</string>
+    <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background</string>
+    <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string>
     <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Default value 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">City</string>
@@ -174,7 +175,7 @@
     <string name="temperature_units">Temperature units</string>
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
-    <string name="text_color_title">Text Color</string> 
+    <string name="text_color_title">Text Color</string>
     <string name="updating">Updating\u2026</string>
     <string name="visibility_units">Visibility units</string>
     <string name="visibility_units_km">" km"</string>
@@ -207,26 +208,73 @@
     <string name="widget_name_medium">(4x1)Weather BZ</string>
     <string name="widget_name_medium_ext">(4x1 ext)Weather BZ</string>
     <string name="widget_name_medium_v5">(4x1 v5)Weather BZ</string>
-    <string name="widget_text_color_summary">"The widget's text color"</string> 
-    <string name="wind_e">E</string> 
+    <string name="widget_text_color_summary">"The widget's text color"</string>
+    <string name="wind_e">E</string>
     <string name="wind_ene">E-NE</string>
     <string name="wind_ese">E-SE</string>
-    <string name="wind_n">N</string>    
-    <string name="wind_ne">NE</string>  
-    <string name="wind_nne">N-NE</string> 
-    <string name="wind_nnw">N-NW</string> 
-    <string name="wind_nw">NW</string> 
-    <string name="wind_s">S</string> 
-    <string name="wind_se">SE</string> 
-    <string name="wind_speed_units">Wind speed units</string>   
+    <string name="wind_n">N</string>
+    <string name="wind_ne">NE</string>
+    <string name="wind_nne">N-NE</string>
+    <string name="wind_nnw">N-NW</string>
+    <string name="wind_nw">NW</string>
+    <string name="wind_s">S</string>
+    <string name="wind_se">SE</string>
+    <string name="wind_speed_units">Wind speed units</string>
     <string name="wind_speed_units_kmph">" km/h"</string>
     <string name="wind_speed_units_mph">" mph"</string>
     <string name="wind_speed_units_mps">" m/s"</string>
     <string name="wind_sse">S-SE</string>
-    <string name="wind_ssw">S-SW</string> 
-    <string name="wind_sw">SW</string> 
-    <string name="wind_variable">Variable</string>  
+    <string name="wind_ssw">S-SW</string>
+    <string name="wind_sw">SW</string>
+    <string name="wind_variable">Variable</string>
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
-    <string name="wind_wsw">W-SW</string>  
+    <string name="wind_wsw">W-SW</string>
+    <string name="foreca_clear">Clear</string>
+    <string name="foreca_mostly_clear">Mostly clear</string>
+    <string name="foreca_mostly_clear_pos_rain">Chance of rain</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Chance of wet snow</string>
+    <string name="foreca_mostly_clear_pos_snow">Chance of snow</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Chance of t-storms with rain</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Chance of t-storms with snow</string>
+    <string name="foreca_partly_cloudy">Partly cloudy</string>
+    <string name="foreca_partly_cloudy_l_rain">Light rain</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
+    <string name="foreca_partly_cloudy_l_snow">Light snow</string>
+    <string name="foreca_partly_cloudy_showers">Showers</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
+    <string name="foreca_partly_cloudy_rain">Rain</string>
+    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
+    <string name="foreca_partly_cloudy_snow">Snow</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
+    <string name="foreca_cloudy">Cloudy</string>
+    <string name="foreca_cloudy_l_rain">Light rain</string>
+    <string name="foreca_cloudy_l_wet_snow">Light wet snow</string>
+    <string name="foreca_cloudy_l_snow">Light snow</string>
+    <string name="foreca_cloudy_showers">Showers</string>
+    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_cloudy_snow_showers">Snow showers</string>
+    <string name="foreca_cloudy_rain">Rain</string>
+    <string name="foreca_cloudy_wet_snow">Wet snow</string>
+    <string name="foreca_cloudy_snow">Snow</string>
+    <string name="foreca_cloudy_ts_rain">T-storms with rain</string>
+    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_cloudy_ts_snow">T-storms with snow</string>
+    <string name="foreca_overcast">Overcast</string>
+    <string name="foreca_overcast_l_rain">Light rain</string>
+    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
+    <string name="foreca_overcast_l_snow">Light snow</string>
+    <string name="foreca_overcast_showers">Showers</string>
+    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_overcast_snow_showers">Snow showers</string>
+    <string name="foreca_overcast_rain">Rain</string>
+    <string name="foreca_overcast_wet_snow">Wet snow</string>
+    <string name="foreca_overcast_snow">Snow</string>
+    <string name="foreca_overcast_ts_rain">T-storms with rain</string>
+    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
 </resources>
