--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="new_version">Новая версия</string> 
-	<string name="upgrade">Обновить</string> 
-	<string name="not_now">Не сейчас</string> 
-    <string name="donations_button_close">Закрыть</string> 
-  	<string name="donations_flattr">Flattr</string> 
-  	<string name="donations_description">Считаете ли вы приложение полезным?\nПоддержите разработчика через flattr или отправьте пожертвование через Google Play Store!</string> 
-  	<string name="donations_flattr_description">Flattr взимает 10% в виде ежемесячной абонентской платы!</string> 
-  	<string name="donations_google_android_market">Google Play Store</string> 
-  	<string name="donations_google_android_market_not_supported_title">Пожертвования через приложение не поддерживаются</string> 
-  	<string name="donations_google_android_market_not_supported">Пожертвования через приложение не поддерживаются. Google Play Store установлен правильно?</string> 
-  	<string name="donations_google_android_market_description">Google взимает 30% с каждого пожертвования!</string> 
-  	<string name="donations_google_android_market_donate_button">Пожертвовать!</string> 
-  	<string name="donations_google_android_market_text">Сколько?</string> 
-  	<string name="donations_paypal">PayPal</string> 
-  	<string name="donations_yandex">Яндекс.Деньги</string> 
-  	<string name="donations_paypal_description">После нажатия на кнопку вы можете выбрать сколько хотите пожертвовать!</string> 
-  	<string name="donations_thanks_dialog_title">Благодарю!</string> 
-  	<string name="donations_thanks_dialog">Благодарю за пожертвование! Я очень это ценю!</string> 
+    <string name="new_version">Новая версия</string>
+    <string name="upgrade">Обновить</string>
+    <string name="not_now">Не сейчас</string>
+    <string name="donations_button_close">Закрыть</string>
+    <string name="donations_flattr">Flattr</string>
+    <string name="donations_description">Считаете ли вы приложение полезным?\nПоддержите разработчика через flattr или отправьте пожертвование через Google Play Store!</string>
+    <string name="donations_flattr_description">Flattr взимает 10% в виде ежемесячной абонентской платы!</string>
+    <string name="donations_google_android_market">Google Play Store</string>
+    <string name="donations_google_android_market_not_supported_title">Пожертвования через приложение не поддерживаются</string>
+    <string name="donations_google_android_market_not_supported">Пожертвования через приложение не поддерживаются. Google Play Store установлен правильно?</string>
+    <string name="donations_google_android_market_description">Google взимает 30% с каждого пожертвования!</string>
+    <string name="donations_google_android_market_donate_button">Пожертвовать!</string>
+    <string name="donations_google_android_market_text">Сколько?</string>
+    <string name="donations_paypal">PayPal</string>
+    <string name="donations_yandex">Яндекс.Деньги</string>
+    <string name="donations_paypal_description">После нажатия на кнопку вы можете выбрать сколько хотите пожертвовать!</string>
+    <string name="donations_thanks_dialog_title">Благодарю!</string>
+    <string name="donations_thanks_dialog">Благодарю за пожертвование! Я очень это ценю!</string>
     <string name="app_name">Погода BZ</string>
     <string name="changelog">Список изменений</string>
     <string name="close">Закрыть</string>
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="loading">Загрузка\u2026</string>
-    <string name="donate">Пожертвование</string> 
+    <string name="donate">Пожертвование</string>
     <string name="settings_check_updates_title">Проверять обновления</string>
-    <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при запуске</string>        
-    <string name="settings_category_app_update">Обновление приложения</string>  
-    <string name="settings_category_forecast_update">Обновление прогноза</string>    
+    <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при запуске</string>
+    <string name="settings_category_app_update">Обновление приложения</string>
+    <string name="settings_category_forecast_update">Обновление прогноза</string>
     <string name="widget_name_medium">Погода BZ 4x1</string>
     <string name="widget_name_medium_ext">Погода BZ 4x1</string>
-    <string name="widget_name_medium_v5">Погода BZ 4x1</string>    
+    <string name="widget_name_medium_v5">Погода BZ 4x1</string>
     <string name="widget_name_large">Погода BZ 4x2</string>
     <string name="widget_name_large_v5">Погода BZ 4x2 v5</string>
     <string name="about_version">Версия:</string>
     <string name="about_author">Автор:</string>
     <string name="about_social">Ссылки:</string>
     <string name="about_for_translators">Для переводчиков:</string>
-    <string name="about_for_translators_text">Если Вы хотите перевести данное приложение на Ваш язык, перейдите в мой аккаунт github (по кнопке выше)</string>              
+    <string name="about_for_translators_text">Если Вы хотите перевести данное приложение на Ваш язык, перейдите в мой аккаунт github (по кнопке выше)</string>
     <string name="about_sunny">Ясно</string>
     <string name="about_sunny_night">Ясно (ночь)</string>
     <string name="about_cloudy">Облачно</string>
@@ -55,7 +55,7 @@
     <string name="about_sleet">Мокрый снег</string>
     <string name="about_snow">Снег</string>
     <string name="about_light_snow">Небольшой снег</string>
-    <string name="about_heavy_snow">Снег</string>    
+    <string name="about_heavy_snow">Снег</string>
     <string name="about_blizzard">Метель</string>
     <string name="animation_preview">Предпросмотр анимации</string>
     <string name="menu_update">Обновить</string>
@@ -88,7 +88,7 @@
     <string name="weather_cond_fog">Туман</string>
     <string name="weather_cond_rainstorm">Шквалистые дожди</string>
     <string name="weather_cond_snow">Снег</string>
-    <string name="weather_cond_t_storms">Гроза</string>    
+    <string name="weather_cond_t_storms">Гроза</string>
     <string name="settings_category_update">Обновление</string>
     <string name="settings_category_update_sum">Настройки автообновления и времени обновления прогноза</string>
     <string name="settings_category_animation">Анимация</string>
@@ -131,8 +131,8 @@
     <string name="settings_category_miui_sum">Настройки для прошивок MIUI, очистка погодных данных MIUI</string>
     <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI</string>
     <string name="settings_miui_support_title">Виджеты MIUI</string>
-	<string name="settings_miui_v5_summary">Включите, если у вас MIUI v5</string>
-    <string name="settings_miui_v5_title">Прошивка MIUI v5</string>    
+    <string name="settings_miui_v5_summary">Включите, если у вас MIUI v5</string>
+    <string name="settings_miui_v5_title">Прошивка MIUI v5</string>
     <string name="clear_miui_data">Очистка базы MIUI</string>
     <string name="clear_miui_data_summary">Очищает базу данных WeatherProvider</string>
     <string name="clear_miui_data_dialog">Очистка базы MIUI</string>
@@ -141,7 +141,7 @@
     <string name="settings_time_format_12h">12-часовой формат</string>
     <string name="settings_show_weather_icons_title">Иконки погоды</string>
     <string name="settings_show_weather_icons_summary">Показывать иконки погоды (вместо текстового описания состояния погоды) в прогнозе на 3 дня</string>
-    <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления</string> 
+    <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления</string>
     <string name="settings_notification_color_title">Цвет символа уведомления</string>
     <string name="settings_category_widgets">Виджеты</string>
     <string name="settings_category_widgets_sum">Внешний вид виджетов и действия по нажатию на виджеты</string>
@@ -180,48 +180,95 @@
     <string name="quiet_hours_enabled_on">Тихие часы включены</string>
     <string name="quiet_hours_enabled_off">Обновления будут работать как обычно</string>
     <string name="start_time_title">Начало</string>
-    <string name="end_time_title">Конец</string>   
+    <string name="end_time_title">Конец</string>
     <string name="dlg_select_action">Выберите действие</string>
     <string name="dlg_go_to_forecast">Перейти к прогнозу</string>
     <string name="dlg_set_as_home">Как \"Основной город\"</string>
-    <string name="wind_n">С</string>    
-    <string name="wind_ne">СВ</string> 
+    <string name="wind_n">С</string>
+    <string name="wind_ne">СВ</string>
     <string name="wind_nne">С-СВ</string>
     <string name="wind_nw">СЗ</string>
-    <string name="wind_nnw">С-СЗ</string> 
-    <string name="wind_s">Ю</string> 
-    <string name="wind_se">ЮВ</string> 
-    <string name="wind_sse">Ю-ЮВ</string> 
+    <string name="wind_nnw">С-СЗ</string>
+    <string name="wind_s">Ю</string>
+    <string name="wind_se">ЮВ</string>
+    <string name="wind_sse">Ю-ЮВ</string>
     <string name="wind_sw">ЮЗ</string>
-    <string name="wind_ssw">Ю-ЮЗ</string>  
-    <string name="wind_e">В</string> 
+    <string name="wind_ssw">Ю-ЮЗ</string>
+    <string name="wind_e">В</string>
     <string name="wind_ene">В-СВ</string>
     <string name="wind_ese">В-ЮВ</string>
-    <string name="wind_w">З</string>  
+    <string name="wind_w">З</string>
     <string name="wind_wnw">З-СЗ</string>
     <string name="wind_wsw">З-ЮЗ</string>
-    <string name="wind_variable">Переменный</string>  
-    <string name="settings_widgets_widget4x1_transparent_title">Прозрачный фон</string> 
-    <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона по умолчанию</string> 
-    <string name="settings_widgets_widget4x1_data_title">Дополнительные данные</string> 
-	<string name="dialog_color_picker">Выбор цвета</string> 
-  	<string name="press_color_to_apply">Нажмите на цвет для выбора</string> 
-  	<string name="text_color_title">Цвет текста</string> 
-  	<string name="main_screen_text_color_summary">Цвет текста главного окна программы</string> 
-  	<string name="widget_text_color_summary">Цвет текста виджета</string> 
-    <string name="pressure_units">Единицы давления</string> 
+    <string name="wind_variable">Переменный</string>
+    <string name="settings_widgets_widget4x1_transparent_title">Прозрачный фон</string>
+    <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона по умолчанию</string>
+    <string name="settings_widgets_widget4x1_data_title">Дополнительные данные</string>
+    <string name="dialog_color_picker">Выбор цвета</string>
+    <string name="press_color_to_apply">Нажмите на цвет для выбора</string>
+    <string name="text_color_title">Цвет текста</string>
+    <string name="main_screen_text_color_summary">Цвет текста главного окна программы</string>
+    <string name="widget_text_color_summary">Цвет текста виджета</string>
+    <string name="pressure_units">Единицы давления</string>
     <string name="pressure_units_mb">" гПа"</string>
     <string name="pressure_units_mmhg">" мм.рт.ст."</string>
-    <string name="wind_speed_units">Единицы скорости ветра</string>   
+    <string name="wind_speed_units">Единицы скорости ветра</string>
     <string name="wind_speed_units_mps">" м/с"</string>
     <string name="wind_speed_units_kmph">" км/ч"</string>
-    <string name="wind_speed_units_mph">" миль/ч"</string> 
+    <string name="wind_speed_units_mph">" миль/ч"</string>
     <string name="visibility_units">Единицы видимости</string>
     <string name="visibility_units_m">" м"</string>
     <string name="visibility_units_km">" км"</string>
-    <string name="visibility_units_mi">" миль"</string>  
+    <string name="visibility_units_mi">" миль"</string>
     <string name="temperature_units">Единицы температуры</string>
     <string name="temperature_units_c">Цельсий</string>
     <string name="temperature_units_f">Фаренгейт</string>
-    <string name="date_format_title">Формат даты</string>	          
+    <string name="date_format_title">Формат даты</string>
+	<string name="foreca_clear">Ясно</string>
+    <string name="foreca_mostly_clear">Ясно</string>
+    <string name="foreca_mostly_clear_pos_rain">Возможен дождь</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Возможен мокрый снег</string>
+    <string name="foreca_mostly_clear_pos_snow">Возможен снег</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Возможна гроза с дождем</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Возможна гроза с мокрым снегом</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Возможна гроза со снегом</string>
+    <string name="foreca_partly_cloudy">Переменная облачность</string>
+    <string name="foreca_partly_cloudy_l_rain">Небольшой дождь</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Небольшой мокрый снег</string>
+    <string name="foreca_partly_cloudy_l_snow">Небольшой снег</string>
+    <string name="foreca_partly_cloudy_showers">Ливни</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Мокрый снег</string>
+    <string name="foreca_partly_cloudy_snow_showers">Снег</string>
+    <string name="foreca_partly_cloudy_rain">Дождь</string>
+    <string name="foreca_partly_cloudy_wet_snow">Мокрый снег</string>
+    <string name="foreca_partly_cloudy_snow">Снег</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Возможна гроза с дождем</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Возможна гроза с мокрым снегом</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Возможна гроза со снегом</string>
+    <string name="foreca_cloudy">Облачно</string>
+    <string name="foreca_cloudy_l_rain">Небольшой дождь</string>
+    <string name="foreca_cloudy_l_wet_snow">Небольшой мокрый снег</string>
+    <string name="foreca_cloudy_l_snow">Небольшой снег</string>
+    <string name="foreca_cloudy_showers">Ливни</string>
+    <string name="foreca_cloudy_wet_snow_showers">Мокрый снег</string>
+    <string name="foreca_cloudy_snow_showers">Снег</string>
+    <string name="foreca_cloudy_rain">Дождь</string>
+    <string name="foreca_cloudy_wet_snow">Мокрый снег</string>
+    <string name="foreca_cloudy_snow">Снег</string>
+    <string name="foreca_cloudy_ts_rain">Гроза с дождем</string>
+    <string name="foreca_cloudy_ts_wet_snow">Гроза с мокрым снегом</string>
+    <string name="foreca_cloudy_ts_snow">Гроза со снегом</string>
+    <string name="foreca_overcast">Пасмурно</string>
+    <string name="foreca_overcast_l_rain">Небольшой дождь</string>
+    <string name="foreca_overcast_l_wet_snow">Небольшой мокрый снег</string>
+    <string name="foreca_overcast_l_snow">Небольшой снег</string>
+    <string name="foreca_overcast_showers">Ливни</string>
+    <string name="foreca_overcast_wet_snow_showers">Мокрый снег</string>
+    <string name="foreca_overcast_snow_showers">Снег</string>
+    <string name="foreca_overcast_rain">Дождь</string>
+    <string name="foreca_overcast_wet_snow">Мокрый снег</string>
+    <string name="foreca_overcast_snow">Снег</string>
+    <string name="foreca_overcast_ts_rain">Гроза с дождем</string>
+    <string name="foreca_overcast_ts_wet_snow">Гроза с мокрым снегом</string>
+    <string name="foreca_overcast_ts_snow">Гроза со снегом</string>
 </resources>
